testsuite/bad/test_bad_publisher_event_type/PublisherBadEventType.flux
type PublisherBadEventType publishes Event1 {
   void test();
}
methods {
   void test() {
      publish Event2.new(); // should be caught at compile time
   }
}